Class API Implemented
